<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_video_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        tools:src="@drawable/image1"
        android:contentDescription="@string/video_thumbnail"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_channel_pic"
            android:layout_width="40dp"
            android:layout_height="40dp"
            tools:src="@drawable/channel_pic"
            android:scaleType="centerCrop"
            android:contentDescription="@string/channel_pic"
            app:shapeAppearanceOverlay="@style/circleImageView"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp">

            <TextView
                android:id="@+id/tv_video_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:textStyle="bold"
                tools:text="The Beauty of existence"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_views"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.Material3.BodySmall"
                    tools:text="194,22,44 views"/>

                <TextView
                    android:id="@+id/tv_upload_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.Material3.BodySmall"
                    android:layout_marginHorizontal="8dp"
                    tools:text="July.1, 2016"
                    />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/more_vert_24px"
            android:contentDescription="@string/settings"/>

    </LinearLayout>

</LinearLayout>