<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fl_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <androidx.media3.ui.PlayerView
            android:id="@+id/pv_video"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            />

        <TextView
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1:20"
            android:textColor="@color/white"
            android:layout_gravity="bottom|end"
            android:layout_margin="20dp"
            android:background="@drawable/video_duration_bg"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_video_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/fl_video"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_video_title"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="The Beauty of existence"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/iv_description"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_expand_more"
                android:contentDescription="@string/expand"
                android:background="@android:color/transparent"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_views"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                tools:text="3,265 views" />

            <TextView
                android:id="@+id/tv_upload_date"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="July 1 2023" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_video_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/iv_like"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_like"
                    android:contentDescription="@string/like"
                    android:background="@android:color/transparent"
                    />

                <TextView
                    android:id="@+id/tv_like"
                    style="@style/TextAppearance.Material3.BodySmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="312" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/iv_dislike"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_dislike"
                    android:contentDescription="@string/dislike"
                    android:background="@android:color/transparent"
                    />

                <TextView
                    android:id="@+id/tv_dislike"
                    style="@style/TextAppearance.Material3.BodySmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="23" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/iv_share"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_send"
                    android:contentDescription="@string/share"
                    android:background="@android:color/transparent"
                    />

                <TextView
                    android:id="@+id/tv_share"
                    style="@style/TextAppearance.Material3.BodySmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/iv_download"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_download"
                    android:contentDescription="@string/download"
                    android:background="@android:color/transparent"
                    />
                <TextView
                    android:id="@+id/tv_download"
                    style="@style/TextAppearance.Material3.BodySmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/download"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/iv_playlist"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_playlist"
                    android:contentDescription="@string/playlist"
                    android:background="@android:color/transparent"
                    />
                <TextView
                    android:id="@+id/tv_playlist"
                    style="@style/TextAppearance.Material3.BodySmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/playlist" />

            </LinearLayout>
        </LinearLayout>



    </LinearLayout>


</RelativeLayout>